After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 722086 - encoder: fix bitrate units (kbps)
encoder: fix bitrate units (kbps)
Status: RESOLVED FIXED
Product: gstreamer-vaapi
Classification: Other
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: gstreamer-vaapi maintainer(s)
gstreamer-vaapi maintainer(s)
Depends on:
Blocks: 719412
 
 
Reported: 2014-01-13 08:52 UTC by Gwenole Beauchesne
Modified: 2014-01-13 16:37 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Gwenole Beauchesne 2014-01-13 08:52:27 UTC
Bitrate is expressed in kilobits per second (kbps). So, this exactly means multiple of 1000 bits, not 1024 bits. This applies to both MPEG-2 and H.264 encoders.
Comment 1 Gwenole Beauchesne 2014-01-13 16:37:40 UTC
commit 368caf22da7cdd2f6b6e29fd20ca40616ca98bc2
Author: Gwenole Beauchesne <gwenole.beauchesne@intel.com>
Date:   Sun Jan 12 23:17:14 2014 +0100

    encoder: fix bitrate units to match kbps.
    
    Bitrate is expressed in kilobits per second (kbps). So, this exactly
    means in multiple of 1000 bits, not 1024 bits.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=722086