gst-libs/gst/vaapi/gstvaapiencoder_mpeg2.c
@@ -126,7 +126,7 @@ ensure_bitrate (GstVaapiEncoderMpeg2 * encoder)
         base_encoder->bitrate = GST_VAAPI_ENCODER_WIDTH (encoder) *
             GST_VAAPI_ENCODER_HEIGHT (encoder) *
             GST_VAAPI_ENCODER_FPS_N (encoder) /
-            GST_VAAPI_ENCODER_FPS_D (encoder) / 4 / 1024;
+            GST_VAAPI_ENCODER_FPS_D (encoder) / 4 / 1000;
       break;
     default:
       base_encoder->bitrate = 0;
@@ -183,7 +183,7 @@ fill_sequence (GstVaapiEncoderMpeg2 * encoder, GstVaapiEncSequence * sequence)
   seq->picture_height = GST_VAAPI_ENCODER_HEIGHT (encoder);
 
   if (base_encoder->bitrate > 0)
-    seq->bits_per_second = base_encoder->bitrate * 1024;
+    seq->bits_per_second = base_encoder->bitrate * 1000;
   else
     seq->bits_per_second = 0;
 
@@ -428,8 +428,8 @@ set_misc_parameters (GstVaapiEncoderMpeg2 * encoder,
   gst_vaapi_enc_picture_add_misc_buffer (picture, misc);
   hrd = misc->impl;
   if (base_encoder->bitrate > 0) {
-    hrd->initial_buffer_fullness = base_encoder->bitrate * 1024 * 4;
-    hrd->buffer_size = base_encoder->bitrate * 1024 * 8;
+    hrd->initial_buffer_fullness = base_encoder->bitrate * 1000 * 4;
+    hrd->buffer_size = base_encoder->bitrate * 1000 * 8;
   } else {
     hrd->initial_buffer_fullness = 0;
     hrd->buffer_size = 0;
@@ -446,7 +446,7 @@ set_misc_parameters (GstVaapiEncoderMpeg2 * encoder,
     rate_control = misc->impl;
     memset (rate_control, 0, sizeof (VAEncMiscParameterRateControl));
     if (base_encoder->bitrate)
-      rate_control->bits_per_second = base_encoder->bitrate * 1024;
+      rate_control->bits_per_second = base_encoder->bitrate * 1000;
     else
       rate_control->bits_per_second = 0;
     rate_control->target_percentage = 70;
